--- a/style.css
+++ b/style.css
@@ -15,14 +15,13 @@ body {
   justify-content: center;
   align-items: center;
 }
-.content {
-  width: 80vw;
-  height: 80vh;
-  /* border: 2px solid black; */
+.container {
   display: flex;
+  /* border: 2px solid black; */
+  width: 80vw;
+  height: 100vh;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
 }
 .navbar {
   width: 80vw;
@@ -41,154 +40,144 @@ body {
   color: gray;
   font-weight: 600;
 }
-.grid-container {
-  display: grid;
-  grid-template-columns: 3, 1fr;
-  grid-template-rows: 3, 1fr;
-  height: 500px;
+.content {
   width: 80vw;
-  grid-template-areas:
-    "i i b"
-    "h m b"
-    "a a a";
-}
-.large-img > img {
-  width: 52vw;
-  height: 200px;
-  grid-area: i;
-}
-.black {
-  margin-right: 0;
-  width: 25.2vw;
-  position: relative;
-  right: -12px;
-  height: 346px;
-  background-color: black;
-  grid-area: b;
+  height: 80vh;
+  /* border: 2px solid blue; */
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  /* align-items: ; */
 }
-.black > .new {
+.top {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  color: orange;
-  height: 46px;
+  flex-direction: row;
+  height: 60vh;
+  gap: 30px;
 }
-.new > .text {
+.left {
   display: flex;
-  justify-content: flex-start;
-  /* border: 2px solid yellow; */
-  width: 22vw;
-}
-.card {
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-}
-.card > .text {
-  width: 22vw;
-  height: 80px;
-  border-bottom: 0.5px solid gray;
-}
-.card > .text > p {
+  flex-direction: column;
+  flex: 2;
   /* border: 2px solid brown; */
-  font-size: 15px;
-  margin-top: 10px;
-  color: hsl(233, 8%, 79%);
-  font-weight: 500;
 }
-.black .VC > .text {
-  border-bottom: none;
-}
-.card > .text > h3 {
-  font-size: 9;
-}
-.card h3 {
-  /* border: 2px solid green; */
-  font-size: 16px;
-}
-
-.card > h3 {
-  font-size: 9;
+.large-img img {
+  width: 54vw;
+  height: 37vh;
+  margin-bottom: 10px;
 }
 .hero {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 52vw;
-  grid-area: h;
+  gap: 10px;
 }
 .headline {
   display: flex;
-  flex-direction: row;
-  grid-area: h;
-  /* border: 2px dotted green; */
-  height: 120px;
-  width: 25vw;
-}
-.headline h1 {
-  font-size: 35px;
+  flex: 1;
+  align-items: center;
+  font-size: 22px;
+  font-weight: 1000;
 }
 .meta {
-  /* border: 2px solid salmon; */
+  /* border: 2px solid green; */
   display: flex;
   flex-direction: column;
+  flex: 1;
   justify-content: space-between;
-  /* padding-left: 15px; */
-  width: 25vw;
-  height: 120px;
-  margin-left: 30px;
+}
+.desc {
+  font-size: 14.5px;
   color: gray;
   font-weight: 500;
 }
 .button {
-  width: 200px;
-  height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: hsl(5, 85%, 60%);
+  background-color: orangered;
+  width: 200px;
+  height: 30px;
   color: white;
-  font-size: 9px;
-  letter-spacing: 5px;
+  letter-spacing: 3px;
+  font-size: 12px;
+}
+.right {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: space-between;
+  align-items: center;
+  background-color: black;
+}
+.black {
+  width: 90%;
+}
+.black > .new {
+  display: flex;
+  align-items: center;
+  color: orange;
+  height: 10vh;
+}
+.card {
+  border-bottom: 1px solid gray;
+  height: 15vh;
+  color: white;
+  margin-bottom: 20px;
+}
+.VC {
+  border: none;
+}
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.text > p {
+  font-size: 14px;
+  margin-top: 10px;
+  color: gray;
 }
 .blogs {
   display: flex;
   flex-direction: row;
+  /* border: 2px solid salmon; */
+  max-height: 20vh;
   justify-content: space-between;
-  grid-area: a;
-  height: 100px;
+  gap: 30px;
 }
 .blogs img {
-  height: 100px;
-  width: 100px;
+  max-width: 100px;
+  max-height: 100px;
 }
 .blog {
-  height: 100px;
-  /* border: 2px solid aquamarine; */
+  /* border: 2px solid red; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 15px;
-  width: 25vw;
+  gap: 20px;
+  width: 33%;
 }
-.blog > .intro {
+.blog > .intro > .number > h2 {
+  color: gray;
+}
+.blog > .intro > .title > h6 {
+  font-size: 18px;
+}
+.blog > .intro > .meta-desc > p {
+  font-size: 14px;
+  color: gray;
+}
+/* .one {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex: 1;
 }
-
-.blog h2 {
-  color: hsl(233, 8%, 79%);
+.two {
+  display: flex;
+  flex: 1;
 }
-
-.blog h6 {
-  font-size: 16px;
-  font-weight: 800;
-}
-.blog p {
-  font-size: 15px;
+*/
+.three {
+  display: flex;
+  width: 330px;
 }
